RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
    typedef uintptr_t ULONG_PTR;
RTC6_API void __stdcall set_mcbsp_in_list(const UINT Mode, const double Scale);
RTC6_API void __stdcall set_multi_mcbsp_in_list(const UINT Ctrl, const UINT P, const UINT Mode);
RTC6_API void __stdcall wait_for_encoder_mode(const LONG Value, const UINT EncoderNo, const LONG Mode);
RTC6_API void __stdcall wait_for_mcbsp(const UINT Axis, const LONG Value, const LONG Mode);
RTC6_API void __stdcall set_encoder_speed(const UINT EncoderNo, const double Speed, const double Smooth);
RTC6_API void __stdcall get_mcbsp_list(void);
RTC6_API void __stdcall store_encoder(const UINT Pos);
RTC6_API void __stdcall wait_for_encoder_in_range_mode(const LONG EncXmin, const LONG EncXmax, const LONG EncYmin, const LONG EncYmax, const UINT Mode);
RTC6_API void __stdcall wait_for_encoder_in_range(const LONG EncXmin, const LONG EncXmax, const LONG EncYmin, const LONG EncYmax);
RTC6_API void __stdcall activate_fly_xy(const double ScaleX, const double ScaleY);
RTC6_API void __stdcall activate_fly_2d(const double ScaleX, const double ScaleY);
RTC6_API void __stdcall activate_fly_xy_encoder(const double ScaleX, const double ScaleY, const LONG EncX, const LONG EncY);
RTC6_API void __stdcall activate_fly_2d_encoder(const double ScaleX, const double ScaleY, const LONG EncX, const LONG EncY);
RTC6_API void __stdcall if_not_activated(void);
RTC6_API void __stdcall park_position(const UINT Mode, const LONG X, const LONG Y);
RTC6_API void __stdcall park_return(const UINT Mode, const LONG X, const LONG Y);
RTC6_API void __stdcall fly_prediction(UINT PredictionX, UINT PredictionY);
RTC6_API void __stdcall set_fly_1_axis(const UINT Axis, const UINT Mode, const double Scale);
RTC6_API void __stdcall fly_return_1_axis(const UINT Axis, const LONG RetPos);
RTC6_API void __stdcall wait_for_1_axis(const LONG Value, const UINT EncoderMode, const LONG WaitMode, const UINT LaserMode);
RTC6_API void __stdcall activate_fly_1_axis(const UINT Axis, const UINT Mode, const double Scale, const LONG Offset);
RTC6_API void __stdcall park_position_1_axis(const UINT Mode, const UINT Axis, const LONG ParkPos);
RTC6_API void __stdcall park_return_1_axis(const UINT Mode, const UINT Axis, const LONG RetPos);
RTC6_API void __stdcall set_fly_2_axes(const UINT Axis1, const UINT Mode1, const double Scale1, const UINT Axis2, const UINT Mode2, const double Scale2);
RTC6_API void __stdcall fly_return_2_axes(const UINT Axis1, const LONG RetPos1, const UINT Axis2, const LONG RetPos2);
RTC6_API void __stdcall wait_for_2_axes(const UINT EncoderModeX, const LONG MinValueX, const LONG MaxValueX, const UINT EncoderModeY, const LONG MinValueY, const LONG MaxValueY, const LONG WaitMode, const UINT LaserMode);
RTC6_API void __stdcall activate_fly_2_axes(const UINT ModeX, const double ScaleX, const LONG OffsetX, const UINT ModeY, const double ScaleY, const LONG OffsetY);
RTC6_API void __stdcall park_position_2_axes(const UINT Mode, const LONG ParkPosX, const LONG ParkPosY);
RTC6_API void __stdcall park_return_2_axes(const UINT Mode, const LONG RetPosX, const LONG RetPosY);
RTC6_API void __stdcall set_fly_3_axes(const UINT ModeX, const double ScaleX, const UINT ModeY, const double ScaleY, const UINT ModeZ, const double ScaleZ);
RTC6_API void __stdcall fly_return_3_axes(const LONG RetPosX, const LONG RetPosY, const LONG RetPosZ);
RTC6_API void __stdcall wait_for_encoder(const LONG Value, const UINT EncoderNo);
RTC6_API void __stdcall n_save_and_restart_timer(const UINT CardNo);
RTC6_API void __stdcall n_set_wobbel_mode_phase(const UINT CardNo, const UINT Transversal, const UINT Longitudinal, const double Freq, const LONG Mode, const double Phase);
RTC6_API void __stdcall n_set_wobbel_mode(const UINT CardNo, const UINT Transversal, const UINT Longitudinal, const double Freq, const LONG Mode);
RTC6_API void __stdcall n_set_wobbel(const UINT CardNo, const UINT Transversal, const UINT Longitudinal, const double Freq);
RTC6_API void __stdcall n_set_wobbel_direction(const UINT CardNo, const LONG dX, const LONG dY);
RTC6_API void __stdcall n_set_wobbel_control(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);
RTC6_API void __stdcall n_set_wobbel_vector(const UINT CardNo, const double dTrans, const double dLong, const UINT Period, const double dPower);
RTC6_API void __stdcall n_set_wobbel_vector_2(const UINT CardNo, const double dTrans, const double dLong, const UINT Period, const double dPower, const double dPower2, const UINT Ctrl);
RTC6_API void __stdcall n_set_wobbel_offset(const UINT CardNo, const LONG OffsetTrans, const LONG OffsetLong);
RTC6_API void __stdcall n_set_trigger(const UINT CardNo, const UINT Period, const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall n_set_trigger4(const UINT CardNo, const UINT Period, const UINT Signal1, const UINT Signal2, const UINT Signal3, const UINT Signal4);
RTC6_API void __stdcall n_set_trigger8(const UINT CardNo, const UINT Period, const UINT Signal1, const UINT Signal2, const UINT Signal3, const UINT Signal4, const UINT Signal5, const UINT Signal6, const UINT Signal7, const UINT Signal8);
RTC6_API void __stdcall n_set_pixel_line_3d(const UINT CardNo, const UINT Channel, const UINT HalfPeriod, const double dX, const double dY, const double dZ);
RTC6_API void __stdcall n_set_pixel_line(const UINT CardNo, const UINT Channel, const UINT HalfPeriod, const double dX, const double dY);
RTC6_API void __stdcall n_set_n_pixel(const UINT CardNo, const UINT PortOutValue1, const UINT PortOutValue2, const UINT Number);
RTC6_API void __stdcall n_set_pixel(const UINT CardNo, const UINT PortOutValue1, const UINT PortOutValue2);
RTC6_API void __stdcall n_rs232_write_text_list(const UINT CardNo, const char* pData);
RTC6_API void __stdcall n_set_mcbsp_out(const UINT CardNo, const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall n_set_mcbsp_out_oie_list(const UINT CardNo, const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall n_set_mcbsp_out_ptr_list(const UINT CardNo, const UINT Number, const ULONG_PTR SignalPtr);
RTC6_API void __stdcall n_camming(const UINT CardNo, const UINT FirstPos, const UINT NPos, const UINT No, const UINT Ctrl, const double Scale, const UINT Code);
RTC6_API void __stdcall n_periodic_toggle_list(const UINT CardNo, const UINT Port, const UINT Mask, const UINT P1, const UINT P2, const UINT Count, const UINT Start);
RTC6_API void __stdcall n_micro_vector_abs_3d(const UINT CardNo, const LONG X, const LONG Y, const LONG Z, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall n_micro_vector_rel_3d(const UINT CardNo, const LONG dX, const LONG dY, const LONG dZ, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall n_micro_vector_abs(const UINT CardNo, const LONG X, const LONG Y, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall n_micro_vector_rel(const UINT CardNo, const LONG dX, const LONG dY, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall n_micro_vector_quad_axis_v_2(const UINT CardNo, const LONG X0, const LONG Y0, const LONG X1, const LONG Y1, const LONG LasOn, const LONG LasOff, const UINT Power, const UINT Port, const UINT Flags, const double Velocity);
RTC6_API void __stdcall n_micro_vector_quad_axis_v(const UINT CardNo, const LONG X0, const LONG Y0, const double X1, const double Y1, const LONG LasOn, const LONG LasOff, const UINT Power, const UINT Port, const UINT Flags, const double Velocity);
RTC6_API void __stdcall n_micro_vector_quad_axis(const UINT CardNo, const LONG X0, const LONG Y0, const double X1, const double Y1, const LONG LasOn, const LONG LasOff, const UINT Power, const UINT Port, const UINT Flags);
RTC6_API void __stdcall n_micro_vector_set_position(const UINT CardNo, const LONG X0, const LONG X1, const LONG X2, const LONG X3, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall n_multi_axis_flags(const UINT CardNo, const UINT Flags);
RTC6_API void __stdcall n_set_free_variable_list(const UINT CardNo, const UINT VarNo, const UINT Value);
RTC6_API void __stdcall n_jump_abs_drill_2(const UINT CardNo, const LONG X, const LONG Y, const UINT DrillTime, const LONG XOff, const LONG YOff);
RTC6_API void __stdcall n_jump_rel_drill_2(const UINT CardNo, const LONG dX, const LONG dY, const UINT DrillTime, const LONG XOff, const LONG YOff);
RTC6_API void __stdcall n_jump_abs_drill(const UINT CardNo, const LONG X, const LONG Y, const UINT DrillTime);
RTC6_API void __stdcall n_jump_rel_drill(const UINT CardNo, const LONG dX, const LONG dY, const UINT DrillTime);
RTC6_API void __stdcall save_and_restart_timer(void);
RTC6_API void __stdcall set_wobbel_mode_phase(const UINT Transversal, const UINT Longitudinal, const double Freq, const LONG Mode, const double Phase);
RTC6_API void __stdcall set_wobbel_mode(const UINT Transversal, const UINT Longitudinal, const double Freq, const LONG Mode);
RTC6_API void __stdcall set_wobbel(const UINT Transversal, const UINT Longitudinal, const double Freq);
RTC6_API void __stdcall set_wobbel_direction(const LONG dX, const LONG dY);
RTC6_API void __stdcall set_wobbel_control(const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);
RTC6_API void __stdcall set_wobbel_vector(const double dTrans, const double dLong, const UINT Period, const double dPower);
RTC6_API void __stdcall set_wobbel_vector_2(const double dTrans, const double dLong, const UINT Period, const double dPower, const double dPower2, const UINT Ctrl);
RTC6_API void __stdcall set_wobbel_offset(const LONG OffsetTrans, const LONG OffsetLong);
RTC6_API void __stdcall set_trigger(const UINT Period, const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall set_trigger4(const UINT Period, const UINT Signal1, const UINT Signal2, const UINT Signal3, const UINT Signal4);
RTC6_API void __stdcall set_trigger8(const UINT Period, const UINT Signal1, const UINT Signal2, const UINT Signal3, const UINT Signal4, const UINT Signal5, const UINT Signal6, const UINT Signal7, const UINT Signal8);
RTC6_API void __stdcall set_pixel_line_3d(const UINT Channel, const UINT HalfPeriod, const double dX, const double dY, const double dZ);
RTC6_API void __stdcall set_pixel_line(const UINT Channel, const UINT HalfPeriod, const double dX, const double dY);
RTC6_API void __stdcall set_n_pixel(const UINT PortOutValue1, const UINT PortOutValue2, const UINT Number);
RTC6_API void __stdcall set_pixel(const UINT PortOutValue1, const UINT PortOutValue2);
RTC6_API void __stdcall rs232_write_text_list(const char* pData);
RTC6_API void __stdcall set_mcbsp_out(const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall set_mcbsp_out_oie_list(const UINT Signal1, const UINT Signal2);
RTC6_API void __stdcall set_mcbsp_out_ptr_list(const UINT Number, const ULONG_PTR SignalPtr);
RTC6_API void __stdcall camming(const UINT FirstPos, const UINT NPos, const UINT No, const UINT Ctrl, const double Scale, const UINT Code);
RTC6_API void __stdcall periodic_toggle_list(const UINT Port, const UINT Mask, const UINT P1, const UINT P2, const UINT Count, const UINT Start);
RTC6_API void __stdcall micro_vector_abs_3d(const LONG X, const LONG Y, const LONG Z, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall micro_vector_rel_3d(const LONG dX, const LONG dY, const LONG dZ, const LONG LasOn, const LONG LasOff);
RTC6_API void __stdcall micro_vector_abs(const LONG X, const LONG Y, const LONG LasOn, const LONG LasOff);