RTC6/RTC6 Files/Windows/RTC6Import.pas

procedure set_mcbsp_in_list(Mode: LongWord; Scale: Double); stdcall; external RTC6DLL;
procedure set_multi_mcbsp_in_list(Ctrl: LongWord; P: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure wait_for_encoder_mode(Value: LongInt; EncoderNo: LongWord; Mode: LongInt); stdcall; external RTC6DLL;
procedure wait_for_mcbsp(Axis: LongWord; Value: LongInt; Mode: LongInt); stdcall; external RTC6DLL;
procedure set_encoder_speed(EncoderNo: LongWord; Speed: Double; Smooth: Double); stdcall; external RTC6DLL;
procedure get_mcbsp_list(); stdcall; external RTC6DLL;
procedure store_encoder(Pos: LongWord); stdcall; external RTC6DLL;
procedure wait_for_encoder_in_range_mode(EncXmin: LongInt; EncXmax: LongInt; EncYmin: LongInt; EncYmax: LongInt; Mode: LongWord); stdcall; external RTC6DLL;
procedure wait_for_encoder_in_range(EncXmin: LongInt; EncXmax: LongInt; EncYmin: LongInt; EncYmax: LongInt); stdcall; external RTC6DLL;
procedure activate_fly_xy(ScaleX: Double; ScaleY: Double); stdcall; external RTC6DLL;
procedure activate_fly_2d(ScaleX: Double; ScaleY: Double); stdcall; external RTC6DLL;
procedure activate_fly_xy_encoder(ScaleX: Double; ScaleY: Double; EncX: LongInt; EncY: LongInt); stdcall; external RTC6DLL;
procedure activate_fly_2d_encoder(ScaleX: Double; ScaleY: Double; EncX: LongInt; EncY: LongInt); stdcall; external RTC6DLL;
procedure if_not_activated(); stdcall; external RTC6DLL;
procedure park_position(Mode: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure park_return(Mode: LongWord; X: LongInt; Y: LongInt); stdcall; external RTC6DLL;
procedure fly_prediction(PredictionX: LongWord; PredictionY: LongWord); stdcall; external RTC6DLL;
procedure set_fly_1_axis(Axis: LongWord; Mode: LongWord; Scale: Double); stdcall; external RTC6DLL;
procedure fly_return_1_axis(Axis: LongWord; RetPos: LongInt); stdcall; external RTC6DLL;
procedure wait_for_1_axis(Value: LongInt; EncoderMode: LongWord; WaitMode: LongInt; LaserMode: LongWord); stdcall; external RTC6DLL;
procedure activate_fly_1_axis(Axis: LongWord; Mode: LongWord; Scale: Double; Offset: LongInt); stdcall; external RTC6DLL;
procedure park_position_1_axis(Mode: LongWord; Axis: LongWord; ParkPos: LongInt); stdcall; external RTC6DLL;
procedure park_return_1_axis(Mode: LongWord; Axis: LongWord; RetPos: LongInt); stdcall; external RTC6DLL;
procedure set_fly_2_axes(Axis1: LongWord; Mode1: LongWord; Scale1: Double; Axis2: LongWord; Mode2: LongWord; Scale2: Double); stdcall; external RTC6DLL;
procedure fly_return_2_axes(Axis1: LongWord; RetPos1: LongInt; Axis2: LongWord; RetPos2: LongInt); stdcall; external RTC6DLL;
procedure wait_for_2_axes(EncoderModeX: LongWord; MinValueX: LongInt; MaxValueX: LongInt; EncoderModeY: LongWord; MinValueY: LongInt; MaxValueY: LongInt; WaitMode: LongInt; LaserMode: LongWord); stdcall; external RTC6DLL;
procedure activate_fly_2_axes(ModeX: LongWord; ScaleX: Double; OffsetX: LongInt; ModeY: LongWord; ScaleY: Double; OffsetY: LongInt); stdcall; external RTC6DLL;
procedure park_position_2_axes(Mode: LongWord; ParkPosX: LongInt; ParkPosY: LongInt); stdcall; external RTC6DLL;
procedure park_return_2_axes(Mode: LongWord; RetPosX: LongInt; RetPosY: LongInt); stdcall; external RTC6DLL;
procedure set_fly_3_axes(ModeX: LongWord; ScaleX: Double; ModeY: LongWord; ScaleY: Double; ModeZ: LongWord; ScaleZ: Double); stdcall; external RTC6DLL;
procedure fly_return_3_axes(RetPosX: LongInt; RetPosY: LongInt; RetPosZ: LongInt); stdcall; external RTC6DLL;
procedure wait_for_encoder(Value: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure n_save_and_restart_timer(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_wobbel_mode_phase(CardNo: LongWord; Transversal: LongWord; Longitudinal: LongWord; Freq: Double; Mode: LongInt; Phase: Double); stdcall; external RTC6DLL;
procedure n_set_wobbel_mode(CardNo: LongWord; Transversal: LongWord; Longitudinal: LongWord; Freq: Double; Mode: LongInt); stdcall; external RTC6DLL;
procedure n_set_wobbel(CardNo: LongWord; Transversal: LongWord; Longitudinal: LongWord; Freq: Double); stdcall; external RTC6DLL;
procedure n_set_wobbel_direction(CardNo: LongWord; dX: LongInt; dY: LongInt); stdcall; external RTC6DLL;
procedure n_set_wobbel_control(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord); stdcall; external RTC6DLL;
procedure n_set_wobbel_vector(CardNo: LongWord; dTrans: Double; dLong: Double; Period: LongWord; dPower: Double); stdcall; external RTC6DLL;
procedure n_set_wobbel_vector_2(CardNo: LongWord; dTrans: Double; dLong: Double; Period: LongWord; dPower: Double; dPower2: Double; Ctrl: LongWord); stdcall; external RTC6DLL;
procedure n_set_wobbel_offset(CardNo: LongWord; OffsetTrans: LongInt; OffsetLong: LongInt); stdcall; external RTC6DLL;
procedure n_set_trigger(CardNo: LongWord; Period: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure n_set_trigger4(CardNo: LongWord; Period: LongWord; Signal1: LongWord; Signal2: LongWord; Signal3: LongWord; Signal4: LongWord); stdcall; external RTC6DLL;
procedure n_set_trigger8(CardNo: LongWord; Period: LongWord; Signal1: LongWord; Signal2: LongWord; Signal3: LongWord; Signal4: LongWord; Signal5: LongWord; Signal6: LongWord; Signal7: LongWord; Signal8: LongWord); stdcall; external RTC6DLL;
procedure n_set_pixel_line_3d(CardNo: LongWord; Channel: LongWord; HalfPeriod: LongWord; dX: Double; dY: Double; dZ: Double); stdcall; external RTC6DLL;
procedure n_set_pixel_line(CardNo: LongWord; Channel: LongWord; HalfPeriod: LongWord; dX: Double; dY: Double); stdcall; external RTC6DLL;
procedure n_set_n_pixel(CardNo: LongWord; PortOutValue1: LongWord; PortOutValue2: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure n_set_pixel(CardNo: LongWord; PortOutValue1: LongWord; PortOutValue2: LongWord); stdcall; external RTC6DLL;
procedure n_rs232_write_text_list(CardNo: LongWord; pData: PChar); stdcall; external RTC6DLL;
procedure n_set_mcbsp_out(CardNo: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_out_oie_list(CardNo: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure n_set_mcbsp_out_ptr_list(CardNo: LongWord; Number: LongWord; SignalPtr: PLongWord); stdcall; external RTC6DLL;
procedure n_camming(CardNo: LongWord; FirstPos: LongWord; NPos: LongWord; No: LongWord; Ctrl: LongWord; Scale: Double; Code: LongWord); stdcall; external RTC6DLL;
procedure n_periodic_toggle_list(CardNo: LongWord; Port: LongWord; Mask: LongWord; P1: LongWord; P2: LongWord; Count: LongWord; Start: LongWord); stdcall; external RTC6DLL;
procedure n_micro_vector_abs_3d(CardNo: LongWord; X: LongInt; Y: LongInt; Z: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure n_micro_vector_rel_3d(CardNo: LongWord; dX: LongInt; dY: LongInt; dZ: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure n_micro_vector_abs(CardNo: LongWord; X: LongInt; Y: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure n_micro_vector_rel(CardNo: LongWord; dX: LongInt; dY: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure n_micro_vector_quad_axis_v_2(CardNo: LongWord; X0: LongInt; Y0: LongInt; X1: LongInt; Y1: LongInt; LasOn: LongInt; LasOff: LongInt; Power: LongWord; Port: LongWord; Flags: LongWord; Velocity: Double); stdcall; external RTC6DLL;
procedure n_micro_vector_quad_axis_v(CardNo: LongWord; X0: LongInt; Y0: LongInt; X1: Double; Y1: Double; LasOn: LongInt; LasOff: LongInt; Power: LongWord; Port: LongWord; Flags: LongWord; Velocity: Double); stdcall; external RTC6DLL;
procedure n_micro_vector_quad_axis(CardNo: LongWord; X0: LongInt; Y0: LongInt; X1: Double; Y1: Double; LasOn: LongInt; LasOff: LongInt; Power: LongWord; Port: LongWord; Flags: LongWord); stdcall; external RTC6DLL;
procedure n_micro_vector_set_position(CardNo: LongWord; X0: LongInt; X1: LongInt; X2: LongInt; X3: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure n_multi_axis_flags(CardNo: LongWord; Flags: LongWord); stdcall; external RTC6DLL;
procedure n_set_free_variable_list(CardNo: LongWord; VarNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_jump_abs_drill_2(CardNo: LongWord; X: LongInt; Y: LongInt; DrillTime: LongWord; XOff: LongInt; YOff: LongInt); stdcall; external RTC6DLL;
procedure n_jump_rel_drill_2(CardNo: LongWord; dX: LongInt; dY: LongInt; DrillTime: LongWord; XOff: LongInt; YOff: LongInt); stdcall; external RTC6DLL;
procedure n_jump_abs_drill(CardNo: LongWord; X: LongInt; Y: LongInt; DrillTime: LongWord); stdcall; external RTC6DLL;
procedure n_jump_rel_drill(CardNo: LongWord; dX: LongInt; dY: LongInt; DrillTime: LongWord); stdcall; external RTC6DLL;
procedure save_and_restart_timer(); stdcall; external RTC6DLL;
procedure set_wobbel_mode_phase(Transversal: LongWord; Longitudinal: LongWord; Freq: Double; Mode: LongInt; Phase: Double); stdcall; external RTC6DLL;
procedure set_wobbel_mode(Transversal: LongWord; Longitudinal: LongWord; Freq: Double; Mode: LongInt); stdcall; external RTC6DLL;
procedure set_wobbel(Transversal: LongWord; Longitudinal: LongWord; Freq: Double); stdcall; external RTC6DLL;
procedure set_wobbel_direction(dX: LongInt; dY: LongInt); stdcall; external RTC6DLL;
procedure set_wobbel_control(Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord); stdcall; external RTC6DLL;
procedure set_wobbel_vector(dTrans: Double; dLong: Double; Period: LongWord; dPower: Double); stdcall; external RTC6DLL;
procedure set_wobbel_vector_2(dTrans: Double; dLong: Double; Period: LongWord; dPower: Double; dPower2: Double; Ctrl: LongWord); stdcall; external RTC6DLL;
procedure set_wobbel_offset(OffsetTrans: LongInt; OffsetLong: LongInt); stdcall; external RTC6DLL;
procedure set_trigger(Period: LongWord; Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure set_trigger4(Period: LongWord; Signal1: LongWord; Signal2: LongWord; Signal3: LongWord; Signal4: LongWord); stdcall; external RTC6DLL;
procedure set_trigger8(Period: LongWord; Signal1: LongWord; Signal2: LongWord; Signal3: LongWord; Signal4: LongWord; Signal5: LongWord; Signal6: LongWord; Signal7: LongWord; Signal8: LongWord); stdcall; external RTC6DLL;
procedure set_pixel_line_3d(Channel: LongWord; HalfPeriod: LongWord; dX: Double; dY: Double; dZ: Double); stdcall; external RTC6DLL;
procedure set_pixel_line(Channel: LongWord; HalfPeriod: LongWord; dX: Double; dY: Double); stdcall; external RTC6DLL;
procedure set_n_pixel(PortOutValue1: LongWord; PortOutValue2: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure set_pixel(PortOutValue1: LongWord; PortOutValue2: LongWord); stdcall; external RTC6DLL;
procedure rs232_write_text_list(pData: PChar); stdcall; external RTC6DLL;
procedure set_mcbsp_out(Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure set_mcbsp_out_oie_list(Signal1: LongWord; Signal2: LongWord); stdcall; external RTC6DLL;
procedure set_mcbsp_out_ptr_list(Number: LongWord; SignalPtr: PLongWord); stdcall; external RTC6DLL;
procedure camming(FirstPos: LongWord; NPos: LongWord; No: LongWord; Ctrl: LongWord; Scale: Double; Code: LongWord); stdcall; external RTC6DLL;
procedure periodic_toggle_list(Port: LongWord; Mask: LongWord; P1: LongWord; P2: LongWord; Count: LongWord; Start: LongWord); stdcall; external RTC6DLL;
procedure micro_vector_abs_3d(X: LongInt; Y: LongInt; Z: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure micro_vector_rel_3d(dX: LongInt; dY: LongInt; dZ: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
procedure micro_vector_abs(X: LongInt; Y: LongInt; LasOn: LongInt; LasOff: LongInt); stdcall; external RTC6DLL;
